@startuml
hide empty members

package model {

	class Space {
	+ int x
	+ int y
	- Player player
	+ {static} boolean isMoveable
	+ {static} boolean laserThrough
	+ Player getPlayer()
	+ void setPlayer(Player)
	~ void playerChanged()
	}
	class Board {
	+ int width
	+ int height
	- Space[][] spaces
	- List<Player> players
	- Player current
	- Phase phase
	+ Space getSpace(int,int)
	+ Player getPlayer(int)
	+ void nextPhase()
	+ void setCurrentPlayer(Player)
	+ Space getNeighbour(Space,Heading)
	}
	class ObstacleSpace{
	+ {static} boolean isMoveable
	+ {static} boolean laserThrough
	}
	class ConveyorBelt{
	+ {static} boolean isMoveable
	+ {static} boolean laserThrough
	+ {static} int distance
	+ void movePlayer()
	}

	class Wall{
	+Heading[] blocked
	}

	class Repair{
	+ {static} boolean isMoveable
	+ {static} boolean laserThrough
	+ void repairPlayer()
	}

}
Space <-left- Repair 
Space <-right- Wall 
Space <-- ConveyorBelt 
Space <-- ObstacleSpace 
Board <-- Space 
observer.Subject <|-- Board

@enduml